force-app/main/default/objects/X100Dayscodechallanges__c/X100Dayscodechallanges__c.object-meta.xml
<CustomObject>
    <label>#100Dayscodechallanges</label>
    <nameField>
        <displayFormat>Day-{00000}</displayFormat>
        <label>#100Dayscodechallanges Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>100Dayscodechallanges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>