force-app/main/default/objects/X100Dayscodechallanges__c/fields/Enter_Armstrong_Number__c.field-meta.xml
<CustomField>
    <fullName>Enter_Armstrong_Number__c</fullName>
    <label>Enter Armstrong Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>