force-app/main/default/objects/X100Dayscodechallanges__c/fields/Enter_Palindrome_Number__c.field-meta.xml
<CustomField>
    <fullName>Enter_Palindrome_Number__c</fullName>
    <label>Enter Palindrome Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>