force-app/main/default/objects/X100Dayscodechallanges__c/fields/isArmstrongNumber__c.field-meta.xml
<CustomField>
    <fullName>isArmstrongNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isArmstrongNumber</label>
    <type>Checkbox</type>
</CustomField>