force-app/main/default/objects/X100Dayscodechallanges__c/fields/isPalindrome__c.field-meta.xml
<CustomField>
    <fullName>isPalindrome__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPalindrome</label>
    <type>Checkbox</type>
</CustomField>