force-app/main/default/objects/X100Dayscodechallanges__c/fields/isPrime_Number__c.field-meta.xml
<CustomField>
    <fullName>isPrime_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPrime Number</label>
    <type>Checkbox</type>
</CustomField>